src/styles/_placeholders.scss
@import "mixins";

%primary-wrapper {
  max-width: $layout_max_width;
  margin: 0 auto;

  &.mini {
    max-width: $layout_max_width_small;
  }
  &.medium {
    max-width: $layout_max_width_medium;
  }
}

%collection-wrapper {
  display: grid;
  grid-template: auto / auto;
  gap: $layout_gutter;
  list-style: none;
  margin: 0;
  padding-left: 0;

  @include media-tablet-sm {
    grid-template: auto / repeat(2, 1fr);
  }
}

%content-grid {
  display: grid;
  grid-template-columns: 1rem repeat(var(--mobile-columns, 4), minmax(0, 1fr)) 1rem;
  row-gap: 2em;

  @include media-tablet {
    grid-template-columns: repeat(var(--tablet-columns, 10), minmax(0, 1fr));
  }
  @include media-laptop {
    grid-template-columns: repeat(var(--desktop-columns, 8), minmax(0, 1fr));
  }
}

%content-grid-block {
  grid-column: var(--mobile-column, 2/6);

  @include media-tablet {
    grid-column: var(--tablet-column, 3/9);
    &.jumbo {
      grid-column: 2/10;
    }
  }
  @include media-laptop {
    grid-column: var(--desktop-column, 3/7);
    &.jumbo {
      grid-column: 2/8;
    }
  }
}

%article-grid {
  display: grid;
  row-gap: 1.5rem;
  grid-template-columns:
    [banner-start jumbo-start bg-start]
    minmax($layout_gutter, 1fr)
    [content-start]
    minmax(0, 34rem)
    [content-end banner-end]
    minmax($layout_gutter,1fr)
    [jumbo-end bg-end close]
  ;

  @include media-tablet {
    grid-template-columns:
      [banner-start]
      1fr
      [jumbo-start bg-start]
      2fr
      [content-start]
      34rem
      [content-end banner-end]
      2fr
      [jumbo-end bg-end]
      1fr
      [close]
    ;
  }
}

